feat: set default components container image and default editor (#1486)
* feat: set default components container image and default editor

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -2199,6 +2199,10 @@ spec:
                       description: Deprecated in favor of `disableInternalClusterSVCNames`.
                       type: boolean
                     workspaceDefaultComponents:
+                      default:
+                        - container:
+                            image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                          name: universal-developer-image
                       description: Default components applied to DevWorkspaces. These
                         default components are meant to be used when a Devfile does
                         not contain any components.
@@ -3700,6 +3704,7 @@ spec:
                         type: object
                       type: array
                     workspaceDefaultEditor:
+                      default: eclipse/che-theia/latest
                       description: The default editor to workspace create with. It
                         could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`.
                         The URI must start from `http`.
@@ -5521,6 +5526,11 @@ spec:
                   type: object
                 devEnvironments:
                   default:
+                    defaultComponents:
+                      - container:
+                          image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                        name: universal-developer-image
+                    defaultEditor: eclipse/che-theia/latest
                     defaultNamespace:
                       template: <username>-che
                     secondsOfInactivityBeforeIdling: 1800
@@ -5530,6 +5540,10 @@ spec:
                   description: Development environment default configuration options.
                   properties:
                     defaultComponents:
+                      default:
+                        - container:
+                            image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                          name: universal-developer-image
                       description: Default components applied to DevWorkspaces. These
                         default components are meant to be used when a Devfile, that
                         does not contain any components.
@@ -7031,6 +7045,7 @@ spec:
                         type: object
                       type: array
                     defaultEditor:
+                      default: eclipse/che-theia/latest
                       description: The default editor to workspace create with. It
                         could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`
                         format. The URI must start from `http://` or `https://`.
