--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -2135,6 +2135,10 @@ spec:
                     description: Deprecated in favor of `disableInternalClusterSVCNames`.
                     type: boolean
                   workspaceDefaultComponents:
+                    default:
+                    - container:
+                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                      name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These
                       default components are meant to be used when a Devfile does
                       not contain any components.
@@ -3586,6 +3590,7 @@ spec:
                       type: object
                     type: array
                   workspaceDefaultEditor:
+                    default: eclipse/che-theia/latest
                     description: The default editor to workspace create with. It could
                       be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`.
                       The URI must start from `http`.
@@ -5378,6 +5383,11 @@ spec:
                 type: object
               devEnvironments:
                 default:
+                  defaultComponents:
+                  - container:
+                      image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                    name: universal-developer-image
+                  defaultEditor: eclipse/che-theia/latest
                   defaultNamespace:
                     template: <username>-che
                   secondsOfInactivityBeforeIdling: 1800
@@ -5387,6 +5397,10 @@ spec:
                 description: Development environment default configuration options.
                 properties:
                   defaultComponents:
+                    default:
+                    - container:
+                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                      name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These
                       default components are meant to be used when a Devfile, that
                       does not contain any components.
@@ -6838,6 +6852,7 @@ spec:
                       type: object
                     type: array
                   defaultEditor:
+                    default: eclipse/che-theia/latest
                     description: The default editor to workspace create with. It could
                       be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`
                       format. The URI must start from `http://` or `https://`.
