--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -3669,6 +3669,14 @@ spec:
                 description: Configuration settings related to the persistent storage
                   used by the Che installation.
                 properties:
+                  perWorkspaceStrategyPVCStorageClassName:
+                    description: Storage class for the Persistent Volume Claims dedicated
+                      to the Che workspaces. When omitted or left blank, a default
+                      storage class is used.
+                    type: string
+                  perWorkspaceStrategyPvcClaimSize:
+                    description: Size of the persistent volume claim for workspaces.
+                    type: string
                   postgresPVCStorageClassName:
                     description: Storage class for the Persistent Volume Claim dedicated
                       to the PostgreSQL database. When omitted or left blank, a default
@@ -5393,7 +5401,7 @@ spec:
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   storage:
-                    pvcStrategy: common
+                    pvcStrategy: per-user
                 description: Development environment default configuration options.
                 properties:
                   defaultComponents:
@@ -6908,11 +6916,26 @@ spec:
                     type: integer
                   storage:
                     default:
-                      pvcStrategy: common
+                      pvcStrategy: per-user
                     description: Workspaces persistent storage.
                     properties:
-                      pvc:
-                        description: PVC settings.
+                      perUserStrategyPvcConfig:
+                        description: PVC settings when using the `per-user` PVC strategy.
+                        properties:
+                          claimSize:
+                            description: Persistent Volume Claim size. To update the
+                              claim size, the storage class that provisions it must
+                              support resizing.
+                            type: string
+                          storageClass:
+                            description: Storage class for the Persistent Volume Claim.
+                              When omitted or left blank, a default storage class
+                              is used.
+                            type: string
+                        type: object
+                      perWorkspaceStrategyPvcConfig:
+                        description: PVC settings when using the `per-workspace` PVC
+                          strategy.
                         properties:
                           claimSize:
                             description: Persistent Volume Claim size. To update the
@@ -6926,12 +6949,14 @@ spec:
                             type: string
                         type: object
                       pvcStrategy:
-                        default: common
-                        description: Persistent volume claim strategy for the Che
-                          server. Only the `common` strategy (all workspaces PVCs
-                          in one volume) is supported . For details, see https://github.com/eclipse/che/issues/21185.
+                        default: per-user
+                        description: 'Persistent volume claim strategy for the Che
+                          server. The supported strategies are: `per-user` (all workspaces
+                          PVCs in one volume) and ''per-workspace'' (each workspace
+                          is given its own individual PVC). For details, see https://github.com/eclipse/che/issues/21185.'
                         enum:
                         - common
+                        - per-user
                         - per-workspace
                         type: string
                     type: object
