--- a/helmcharts/stable/crds/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/helmcharts/stable/crds/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -1444,6 +1444,10 @@ spec:
                     description: Deprecated in favor of `disableInternalClusterSVCNames`.
                     type: boolean
                   workspaceDefaultComponents:
+                    default:
+                    - container:
+                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                      name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These default components are meant to be used when a Devfile does not contain any components.
                     items:
                       properties:
@@ -2363,6 +2367,7 @@ spec:
                       type: object
                     type: array
                   workspaceDefaultEditor:
+                    default: eclipse/che-theia/latest
                     description: The default editor to workspace create with. It could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`. The URI must start from `http`.
                     type: string
                   workspaceNamespaceDefault:
@@ -2414,6 +2419,12 @@ spec:
               storage:
                 description: Configuration settings related to the persistent storage used by the Che installation.
                 properties:
+                  perWorkspaceStrategyPVCStorageClassName:
+                    description: Storage class for the Persistent Volume Claims dedicated to the Che workspaces. When omitted or left blank, a default storage class is used.
+                    type: string
+                  perWorkspaceStrategyPvcClaimSize:
+                    description: Size of the persistent volume claim for workspaces.
+                    type: string
                   postgresPVCStorageClassName:
                     description: Storage class for the Persistent Volume Claim dedicated to the PostgreSQL database. When omitted or left blank, a default storage class is used.
                     type: string
@@ -3684,15 +3695,24 @@ spec:
                 type: object
               devEnvironments:
                 default:
+                  defaultComponents:
+                  - container:
+                      image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                    name: universal-developer-image
+                  defaultEditor: eclipse/che-theia/latest
                   defaultNamespace:
                     template: <username>-che
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   storage:
-                    pvcStrategy: common
+                    pvcStrategy: per-user
                 description: Development environment default configuration options.
                 properties:
                   defaultComponents:
+                    default:
+                    - container:
+                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                      name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These default components are meant to be used when a Devfile, that does not contain any components.
                     items:
                       properties:
@@ -4612,6 +4632,7 @@ spec:
                       type: object
                     type: array
                   defaultEditor:
+                    default: eclipse/che-theia/latest
                     description: The default editor to workspace create with. It could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version` format. The URI must start from `http://` or `https://`.
                     type: string
                   defaultNamespace:
@@ -4656,11 +4677,21 @@ spec:
                     type: integer
                   storage:
                     default:
-                      pvcStrategy: common
+                      pvcStrategy: per-user
                     description: Workspaces persistent storage.
                     properties:
-                      pvc:
-                        description: PVC settings.
+                      perUserStrategyPvcConfig:
+                        description: PVC settings when using the `per-user` PVC strategy.
+                        properties:
+                          claimSize:
+                            description: Persistent Volume Claim size. To update the claim size, the storage class that provisions it must support resizing.
+                            type: string
+                          storageClass:
+                            description: Storage class for the Persistent Volume Claim. When omitted or left blank, a default storage class is used.
+                            type: string
+                        type: object
+                      perWorkspaceStrategyPvcConfig:
+                        description: PVC settings when using the `per-workspace` PVC strategy.
                         properties:
                           claimSize:
                             description: Persistent Volume Claim size. To update the claim size, the storage class that provisions it must support resizing.
@@ -4670,10 +4701,11 @@ spec:
                             type: string
                         type: object
                       pvcStrategy:
-                        default: common
-                        description: Persistent volume claim strategy for the Che server. Only the `common` strategy (all workspaces PVCs in one volume) is supported . For details, see https://github.com/eclipse/che/issues/21185.
+                        default: per-user
+                        description: 'Persistent volume claim strategy for the Che server. The supported strategies are: `per-user` (all workspaces PVCs in one volume) and ''per-workspace'' (each workspace is given its own individual PVC). For details, see https://github.com/eclipse/che/issues/21185.'
                         enum:
                         - common
+                        - per-user
                         - per-workspace
                         type: string
                     type: object
