Update dev resources
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1266,6 +1266,10 @@ spec:
                         images involved in a Che deployment. This is particularly
                         useful to install Eclipse Che in a restricted environment.
                       type: string
+                    allowAutoProvisionUserNamespace:
+                      description: Indicates if is allowed to create a Kubernetes
+                        namespace, or an OpenShift project.
+                      type: boolean
                     allowUserDefinedWorkspaceNamespaces:
                       description: Deprecated. The value of this flag is ignored.
                         Defines that a user is allowed to specify a Kubernetes namespace,
@@ -7063,6 +7067,10 @@ spec:
                         template: <username>-che
                       description: User's default namespace.
                       properties:
+                        autoProvision:
+                          description: Indicates if is allowed to create a Kubernetes
+                            namespace, or an OpenShift project.
+                          type: boolean
                         template:
                           default: <username>-che
                           description: If you don't create the user namespaces in
