--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1225,6 +1225,10 @@ spec:
                       involved in a Che deployment. This is particularly useful to
                       install Eclipse Che in a restricted environment.
                     type: string
+                  allowAutoProvisionUserNamespace:
+                    description: Indicates if is allowed to create a Kubernetes namespace,
+                      or an OpenShift project.
+                    type: boolean
                   allowUserDefinedWorkspaceNamespaces:
                     description: Deprecated. The value of this flag is ignored. Defines
                       that a user is allowed to specify a Kubernetes namespace, or
@@ -6870,6 +6874,10 @@ spec:
                       template: <username>-che
                     description: User's default namespace.
                     properties:
+                      autoProvision:
+                        description: Indicates if is allowed to create a Kubernetes
+                          namespace, or an OpenShift project.
+                        type: boolean
                       template:
                         default: <username>-che
                         description: If you don't create the user namespaces in advance,
