--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1267,8 +1267,9 @@ spec:
                         useful to install Eclipse Che in a restricted environment.
                       type: string
                     allowAutoProvisionUserNamespace:
-                      description: Indicates if is allowed to create a Kubernetes
-                        namespace, or an OpenShift project.
+                      description: Indicates if is allowed to automatically create
+                        a user namespace. If it set to false, then user namespace
+                        must be pre-created by a cluster administrator.
                       type: boolean
                     allowUserDefinedWorkspaceNamespaces:
                       description: Deprecated. The value of this flag is ignored.
