--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1266,6 +1266,11 @@ spec:
                         images involved in a Che deployment. This is particularly
                         useful to install Eclipse Che in a restricted environment.
                       type: string
+                    allowAutoProvisionUserNamespace:
+                      description: Indicates if is allowed to automatically create
+                        a user namespace. If it set to false, then user namespace
+                        must be pre-created by a cluster administrator.
+                      type: boolean
                     allowUserDefinedWorkspaceNamespaces:
                       description: Deprecated. The value of this flag is ignored.
                         Defines that a user is allowed to specify a Kubernetes namespace,
@@ -5540,6 +5545,7 @@ spec:
                         name: universal-developer-image
                     defaultEditor: eclipse/che-theia/latest
                     defaultNamespace:
+                      autoProvision: true
                       template: <username>-che
                     secondsOfInactivityBeforeIdling: 1800
                     secondsOfRunBeforeIdling: -1
@@ -7060,9 +7066,16 @@ spec:
                       type: string
                     defaultNamespace:
                       default:
+                        autoProvision: true
                         template: <username>-che
                       description: User's default namespace.
                       properties:
+                        autoProvision:
+                          default: true
+                          description: Indicates if is allowed to automatically create
+                            a user namespace. If it set to false, then user namespace
+                            must be pre-created by a cluster administrator.
+                          type: boolean
                         template:
                           default: <username>-che
                           description: If you don't create the user namespaces in
