--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1159,11 +1159,10 @@ spec:
                               private key, Bitbucket Application link consumer key
                               and Bitbucket Application link shared secret must be
                               stored in `private.key`, `consumer.key` and `shared_secret`
-                              keys of the Kubernetes secret respectively. For OAuth
-                              2.0: Bitbucket OAuth consumer key and Bitbucket OAuth
-                              consumer secret must be stored in `id` and `secret`
-                              keys of the Kubernetes secret respectively. See the
-                              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-bitbucket/.'
+                              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+                              For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
+                              OAuth consumer secret must be stored in `id` and `secret`
+                              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
                             type: string
                         required:
                           - secretName
@@ -1178,10 +1177,9 @@ spec:
                         properties:
                           secretName:
                             description: 'Kubernetes secret, that contains Base64-encoded
-                              GitHub OAuth Client id and GitHub OAuth Client secret
-                              data. The GitHub OAuth data must be stored in the Kubernetes
-                              secret in `id` and `secret` keys respectively. See the
-                              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+                              GitHub OAuth Client id and GitHub OAuth Client secret,
+                              that stored in `id` and `secret` keys respectively.
+                              See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                             type: string
                         required:
                           - secretName
@@ -1201,8 +1199,7 @@ spec:
                           secretName:
                             description: 'Kubernetes secret, that contains Base64-encoded
                               GitHub Application id and GitLab Application Client
-                              secret data. The GitLab Application data must be stored
-                              in `id` and `secret` keys of the Kubernetes secret respectively.
+                              secret, that stored in `id` and `secret` keys respectively.
                               See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
                             type: string
                         required:
@@ -7316,11 +7313,10 @@ spec:
                               private key, Bitbucket Application link consumer key
                               and Bitbucket Application link shared secret must be
                               stored in `private.key`, `consumer.key` and `shared_secret`
-                              keys of the Kubernetes secret respectively. For OAuth
-                              2.0: Bitbucket OAuth consumer key and Bitbucket OAuth
-                              consumer secret must be stored in `id` and `secret`
-                              keys of the Kubernetes secret respectively. See the
-                              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-bitbucket/.'
+                              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+                              For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
+                              OAuth consumer secret must be stored in `id` and `secret`
+                              keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
                             type: string
                         required:
                           - secretName
@@ -7335,10 +7331,9 @@ spec:
                         properties:
                           secretName:
                             description: 'Kubernetes secret, that contains Base64-encoded
-                              GitHub OAuth Client id and GitHub OAuth Client secret
-                              data. The GitHub OAuth data must be stored in the Kubernetes
-                              secret in `id` and `secret` keys respectively. See the
-                              following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+                              GitHub OAuth Client id and GitHub OAuth Client secret,
+                              that stored in `id` and `secret` keys respectively.
+                              See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                             type: string
                         required:
                           - secretName
@@ -7358,8 +7353,7 @@ spec:
                           secretName:
                             description: 'Kubernetes secret, that contains Base64-encoded
                               GitHub Application id and GitLab Application Client
-                              secret data. The GitLab Application data must be stored
-                              in `id` and `secret` keys of the Kubernetes secret respectively.
+                              secret, that stored in `id` and `secret` keys respectively.
                               See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
                             type: string
                         required:
