--- a/config/manifests/bases/che-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/che-operator.clusterserviceversion.yaml
@@ -95,10 +95,11 @@ spec:
       - description: 'Kubernetes secret, that contains Base64-encoded Bitbucket OAuth
           1.0 or OAuth 2.0 data. For OAuth 1.0: private key, Bitbucket Application
           link consumer key and Bitbucket Application link shared secret must be stored
-          in `private.key`, `consumer.key` and `shared_secret` keys of the Kubernetes
-          secret respectively. For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
-          OAuth consumer secret must be stored in `id` and `secret` keys of the Kubernetes
-          secret respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-bitbucket/.'
+          in `private.key`, `consumer.key` and `shared_secret` keys respectively.
+          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+          For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket OAuth consumer
+          secret must be stored in `id` and `secret` keys respectively. See the following
+          page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
         displayName: Secret Name
         path: gitServices.bitbucket[0].secretName
         x-descriptors:
@@ -108,9 +109,8 @@ spec:
         displayName: GitHub
         path: gitServices.github
       - description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth
-          Client id and GitHub OAuth Client secret data. The GitHub OAuth data must
-          be stored in the Kubernetes secret in `id` and `secret` keys respectively.
-          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+          Client id and GitHub OAuth Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
         displayName: Secret Name
         path: gitServices.github[0].secretName
         x-descriptors:
@@ -120,9 +120,8 @@ spec:
         displayName: GitLab
         path: gitServices.gitlab
       - description: 'Kubernetes secret, that contains Base64-encoded GitHub Application
-          id and GitLab Application Client secret data. The GitLab Application data
-          must be stored in `id` and `secret` keys of the Kubernetes secret respectively.
-          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+          id and GitLab Application Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
         displayName: Secret Name
         path: gitServices.gitlab[0].secretName
         x-descriptors:
@@ -259,10 +258,11 @@ spec:
       - description: 'Kubernetes secret, that contains Base64-encoded Bitbucket OAuth
           1.0 or OAuth 2.0 data. For OAuth 1.0: private key, Bitbucket Application
           link consumer key and Bitbucket Application link shared secret must be stored
-          in `private.key`, `consumer.key` and `shared_secret` keys of the Kubernetes
-          secret respectively. For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
-          OAuth consumer secret must be stored in `id` and `secret` keys of the Kubernetes
-          secret respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-bitbucket/.'
+          in `private.key`, `consumer.key` and `shared_secret` keys respectively.
+          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
+          For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket OAuth consumer
+          secret must be stored in `id` and `secret` keys respectively. See the following
+          page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
         displayName: Secret Name
         path: gitServices.bitbucket[0].secretName
         x-descriptors:
@@ -272,9 +272,8 @@ spec:
         displayName: GitHub
         path: gitServices.github
       - description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth
-          Client id and GitHub OAuth Client secret data. The GitHub OAuth data must
-          be stored in the Kubernetes secret in `id` and `secret` keys respectively.
-          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+          Client id and GitHub OAuth Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
         displayName: Secret Name
         path: gitServices.github[0].secretName
         x-descriptors:
@@ -284,9 +283,8 @@ spec:
         displayName: GitLab
         path: gitServices.gitlab
       - description: 'Kubernetes secret, that contains Base64-encoded GitHub Application
-          id and GitLab Application Client secret data. The GitLab Application data
-          must be stored in `id` and `secret` keys of the Kubernetes secret respectively.
-          See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+          id and GitLab Application Client secret, that stored in `id` and `secret`
+          keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
         displayName: Secret Name
         path: gitServices.gitlab[0].secretName
         x-descriptors:
