--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -785,10 +785,15 @@ spec:
                     items:
                       description: GitHubService enables users to work with repositories hosted on GitHub (GitHub.com or GitHub Enterprise).
                       properties:
+                        endpoint:
+                          default: https://github.com
+                          description: GitHub server endpoint URL.
+                          type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth Client id and GitHub OAuth Client secret, that stored in `id` and `secret` keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                       required:
+                      - endpoint
                       - secretName
                       type: object
                     type: array
@@ -4827,10 +4832,15 @@ spec:
                     items:
                       description: GitHubService enables users to work with repositories hosted on GitHub (GitHub.com or GitHub Enterprise).
                       properties:
+                        endpoint:
+                          default: https://github.com
+                          description: GitHub server endpoint URL.
+                          type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded GitHub OAuth Client id and GitHub OAuth Client secret, that stored in `id` and `secret` keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                       required:
+                      - endpoint
                       - secretName
                       type: object
                     type: array
