--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1134,6 +1134,10 @@ spec:
                       description: GitHubService enables users to work with repositories
                         hosted on GitHub (GitHub.com or GitHub Enterprise).
                       properties:
+                        endpoint:
+                          default: https://github.com
+                          description: GitHub server endpoint URL.
+                          type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
                             GitHub OAuth Client id and GitHub OAuth Client secret,
@@ -1141,6 +1145,7 @@ spec:
                             the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                       required:
+                      - endpoint
                       - secretName
                       type: object
                     type: array
@@ -7132,6 +7137,10 @@ spec:
                       description: GitHubService enables users to work with repositories
                         hosted on GitHub (GitHub.com or GitHub Enterprise).
                       properties:
+                        endpoint:
+                          default: https://github.com
+                          description: GitHub server endpoint URL.
+                          type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
                             GitHub OAuth Client id and GitHub OAuth Client secret,
@@ -7139,6 +7148,7 @@ spec:
                             the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                       required:
+                      - endpoint
                       - secretName
                       type: object
                     type: array
